<resources>
    <string name="app_name">Daily Pic</string>
    <string name="search_wiki">Искать в википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_theme">Выберите тему оформления</string>
    <string name="black">Черная</string>
    <string name="white">Белая</string>
    <string name="gray">Серая</string>
    <string name="blue">Голубая</string>
    <string name="pink">Розовая</string>
    <string name="violet">Фиолетовая</string>
    <string name="earth">Земля</string>
    <string name="planets">Планеты</string>
    <string name="weather">Погода</string>
    <string name="mars">Марс</string>
    <string name="picture_of_the_day">Фото дня</string>
</resources>