<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_theme_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/single_common_margin"
        android:text="@string/choose_theme"
        android:textSize="@dimen/large_text_size" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/LightChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_white"
            android:text="@string/white" />

        <com.google.android.material.chip.Chip
            style="@style/DarkChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_black"
            android:textColor="@color/color_white"
            android:text="@string/black" />

        <com.google.android.material.chip.Chip
            style="@style/DarkChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_gray"
            android:text="@string/gray" />

        <com.google.android.material.chip.Chip
            style="@style/LightChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_blue"
            android:text="@string/blue" />

        <com.google.android.material.chip.Chip
            style="@style/LightChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_pink"
            android:text="@string/pink" />


        <com.google.android.material.chip.Chip
            style="@style/DarkChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/color_violet"
            android:text="@string/violet" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
