<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/app_bar"
        android:layout_height="@dimen/topbar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">
            <ImageView
                android:contentDescription="@string/picture_of_the_day"
                android:id="@+id/top_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:id="@+id/top_toolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_top_navigation"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"
                android:background="@android:color/transparent"
                android:stateListAnimator="@xml/toolbar_animation"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/motion_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/single_common_padding"
            android:paddingEnd="@dimen/single_common_padding">

            <View
                android:id="@+id/bottom_sheet_line_2"
                android:layout_width="@dimen/bottom_sheet_line_width"
                android:layout_height="@dimen/line_height"
                android:background="#663b4351"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/double_common_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                android:paddingVertical="@dimen/single_common_padding"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_baseline_search_24"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:id="@+id/bottom_sheet_line"
                android:layout_width="@dimen/bottom_sheet_line_width"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="5dp"
                android:background="#663b4351"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout" />

            <TextView
                android:id="@+id/bottom_sheet_description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_line"
                tools:text="Two Clusters and a Comet" />

            <TextView
                android:id="@+id/bottom_sheet_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_description_header"
                tools:text="This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May." />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:contentDescription="@string/wiki_helper_text"
        style="@style/Widget.Design.FloatingActionButton"
        android:id="@+id/fab"
        app:fabSize="normal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/color_light_gray"
        android:tint="@color/color_black"
        android:visibility="visible"
        android:src="@drawable/ic_wikipedia_svgrepo_com"
        android:layout_marginEnd="@dimen/double_common_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:stateListAnimator="@xml/toolbar_animation"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>